[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/scenes/ActionRemapButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menus/script/Options.gd" type="Script" id=2]
[ext_resource path="res://resources/font_adventurer_dynamic.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/assets/Font/Adventurer.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0, 0.00392157, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -544, -128 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1008.0
margin_bottom = 584.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1008.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 16 )
custom_fonts/font = SubResource( 2 )
text = "OPTIONS"
align = 1
valign = 1

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 1008.0
margin_bottom = 52.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 255.0
margin_right = 307.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "Volume"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 311.0
margin_right = 349.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "100%"

[node name="Volume_slider" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 353.0
margin_right = 753.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
value = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 1008.0
margin_bottom = 72.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 234.0
margin_right = 328.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "Audio Effects"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 332.0
margin_right = 370.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "100%"

[node name="Audio_slider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 374.0
margin_right = 774.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
value = 100.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 1008.0
margin_bottom = 100.0
alignment = 1

[node name="MusicEnabled" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 435.0
margin_right = 572.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
pressed = true
text = "Music enabled?"
icon_align = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 1008.0
margin_bottom = 128.0
alignment = 1

[node name="AudioEnabled" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 436.0
margin_right = 571.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
pressed = true
text = "Audio enabled?"
icon_align = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 1008.0
margin_bottom = 154.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 466.0
margin_right = 541.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
margin_top = 3.0
margin_right = 59.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Move up"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/HBoxContainer4/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 63.0
margin_right = 75.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 1008.0
margin_bottom = 180.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 457.0
margin_right = 551.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5/HBoxContainer"]
margin_top = 3.0
margin_right = 78.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Move down"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/HBoxContainer5/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 82.0
margin_right = 94.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
action = "ui_down"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 1008.0
margin_bottom = 206.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
margin_left = 464.0
margin_right = 544.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6/HBoxContainer"]
margin_top = 3.0
margin_right = 64.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Move left"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/HBoxContainer6/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 68.0
margin_right = 80.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
action = "ui_left"

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 1008.0
margin_bottom = 232.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
margin_left = 459.0
margin_right = 549.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer7/HBoxContainer"]
margin_top = 3.0
margin_right = 74.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Move right"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/HBoxContainer7/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 78.0
margin_right = 90.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
action = "ui_right"

[node name="HBoxContainer8" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 1008.0
margin_bottom = 258.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
margin_left = 475.0
margin_right = 533.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer8/HBoxContainer"]
margin_top = 3.0
margin_right = 42.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Dodge"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/HBoxContainer8/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 46.0
margin_right = 58.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
action = "ui_dodge"

[node name="HBoxContainer9" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 1008.0
margin_bottom = 284.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer9"]
margin_left = 474.0
margin_right = 533.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer9/HBoxContainer"]
margin_top = 3.0
margin_right = 43.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Curse"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/HBoxContainer9/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 47.0
margin_right = 59.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
action = "ui_curse"

[node name="HBoxContainer10" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 1008.0
margin_bottom = 310.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer10"]
margin_left = 446.0
margin_right = 561.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer10/HBoxContainer"]
margin_top = 3.0
margin_right = 40.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Melee"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/HBoxContainer10/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 44.0
margin_right = 56.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
action = "ui_attack_melee"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer10/HBoxContainer"]
margin_left = 60.0
margin_top = 3.0
margin_right = 115.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Mouse 1"

[node name="HBoxContainer11" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 314.0
margin_right = 1008.0
margin_bottom = 336.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer11"]
margin_left = 438.0
margin_right = 569.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer11/HBoxContainer"]
margin_top = 3.0
margin_right = 52.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Ranged"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/HBoxContainer11/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 56.0
margin_right = 68.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
action = "ui_attack_ranged"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer11/HBoxContainer"]
margin_left = 72.0
margin_top = 3.0
margin_right = 131.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Mouse 2"

[node name="HBoxContainer12" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 1008.0
margin_bottom = 362.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer12"]
margin_left = 474.0
margin_right = 534.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer12/HBoxContainer"]
margin_top = 3.0
margin_right = 44.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Pause"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/HBoxContainer12/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 48.0
margin_right = 60.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
action = "ui_pause"

[node name="HBoxContainer14" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 1008.0
margin_bottom = 388.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer14"]
margin_left = 443.0
margin_right = 565.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer14/HBoxContainer"]
margin_top = 3.0
margin_right = 106.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Text read/skip"

[node name="ActionRemapButton" parent="MarginContainer/VBoxContainer/HBoxContainer14/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 110.0
margin_right = 122.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
action = "ui_textbutton"

[node name="HBoxContainer13" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 392.0
margin_right = 1008.0
margin_bottom = 414.0
alignment = 1

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer13"]
margin_left = 322.0
margin_right = 369.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Save"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer13"]
margin_left = 373.0
margin_right = 432.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Cancel"

[node name="Reset" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer13"]
margin_left = 436.0
margin_right = 560.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Reset to default"

[node name="Return" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer13"]
margin_left = 564.0
margin_right = 685.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Return to menu"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/VBoxContainer/Volume_slider" to="." method="_on_Volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Audio_slider" to="." method="_on_Audio_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer13/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer13/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer13/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer13/Return" to="." method="_on_Return_pressed"]
